deploy/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect-access-control-deployment
spec:
  replicas: 2
  revisionHistoryLimit: 0
  template:
    metadata:
      annotations:
        injector.tumblr.com/request: "vault-auth"
        prometheus.io/path: /metrics
        prometheus.io/port: "8081"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
        prometheus.istio.io/merge-metrics: "true"
        observability.volvocars.com/log-format: json
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: connect-access-control-container
          image: image
          volumeMounts:
            - name: access-control-secret-store-volume
              mountPath: "/mnt/secrets-store"
              readOnly: true
          imagePullPolicy: Always
          ports:
            - name: main
              containerPort: 8080
              protocol: TCP
            - name: admin
              containerPort: 8081
              protocol: TCP

          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            httpGet:
              path: /livez
              port: 8081

          readinessProbe:
            failureThreshold: 10
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            httpGet:
              path: /readyz
              port: 8081

          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi

      volumes:
        - name: access-control-secret-store-volume
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: access-control-secret-provider-class
