deploy/base/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: connect-access-control-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
